Make sure long links wrap

--- a/assets/stylesheets/fellows/typography.scss
+++ b/assets/stylesheets/fellows/typography.scss
@@ -1,6 +1,7 @@
 body {
   color: $color-gray;
   font-family: $font-body;
+  word-break: break-word;
 }
 h1, h2, h3, h4, h5, h6 {
   color: $color-gray-dark;
